# AI-Neuro-Marketing-Validator

./: .env.example  .gitignore  DEPLOY.md  PLAN.md  README.md  modal_app.py
.omc/: project-memory.json
.omc/state/: hud-stdin-cache.json  last-tool-error.json
.omc/state/sessions/9b82272f-13dd-465d-9c5d-f9c81489db16/: hud-state.json
backend/: pyproject.toml
backend/src/neuromarketing/: config.py  main.py
backend/src/neuromarketing/api/: analysis.py  health.py  router.py
backend/src/neuromarketing/data/: glasser_lookup.json
backend/src/neuromarketing/middleware/: access_guard.py
backend/src/neuromarketing/schemas/: analysis.py  enums.py
backend/src/neuromarketing/services/: claude_service.py  mock_tribe.py  pipeline.py  roi_mapper.py  storage.py  tribe_models.py  tribe_service.py
backend/src/neuromarketing/utils/: video.py
backend/tests/: conftest.py  test_claude_service.py  test_health.py  test_pipeline.py  test_roi_mapper.py  test_storage.py  test_tribe_service.py  test_video_utils.py
frontend/: package-lock.json  pnpm-lock.yaml
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/processing/: ProcessingStatus.tsx
frontend/src/components/upload/: UploadZone.tsx  VideoPreview.tsx
frontend/src/hooks/: useAnalysis.ts
frontend/src/types/: analysis.ts
